# terramind_playground

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: aoi_fetcher.py  h3_2_aoi.py  raster_2_xarray.py
