[project]
name = "terramind-contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers==0.30.0",
    "gdal",
    "gdown>=5.2.0",
    "h3>=4.3.1",
    "jupyter>=1.1.1",
    "pydantic-settings>=2.10.1",
    "stamina>=25.1.0",
    "tensorboard>=2.19.0",
    "terratorch",
]

[tool.uv.sources]
terratorch = { git = "https://github.com/IBM/terratorch.git" }
gdal = { url = "https://github.com/girder/large_image_wheels/raw/wheelhouse/GDAL-3.12.0.1-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl" }
